# pSync

./: AUTHORS  COPYING  Makefile.am  NEWS  configure.ac  strap_auto
doc/: example_pSync.conf
scripts/: Makefile.am  pSync.sh.in
