SUBDIRS = scripts

EXTRA_DIST = etc/pSync.conf

#install-data-local:
#	@if !( test -f "${HOME}/.pSync.conf" ); then \
#		cp doc/example_pSync.conf ${HOME}/.pSync.conf ; \
#		echo "  ** Example configuration file (.pSync.conf) installed to ${HOME}" ; \
#	else
#		echo "  ** pSync configuration file (${HOME}/.pSync.conf) preserved" ;\
#	fi

.PHONY: all

